--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -28,7 +28,7 @@
             <div class="input-field col s12">
               <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
               <input id="task_name" name="task_name" minlength="5" maxlength="50"
-                value="{{ task.task_name }} type="text" class="validate" required>
+                value="{{ task.task_name }}" type="text" class="validate" required>
               <label for="task_name">Task Name</label>
             </div>
           </div>
@@ -36,7 +36,8 @@
               <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
               <textarea id="task_description" name="task_description" minlength="5"
                 maxlength="50" class="materialize-textarea validate" required>
-              {{- task.task_description -}}</textarea>
+                {{- task.task_description -}}
+              </textarea>
               <label for="task_description">Task Description</label>
             </div>
           
@@ -45,7 +46,7 @@
             <div class="input-field col s12">
               <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
               <input id="due_date" name="due_date"
-              type="text" class="validate datepicker" required>
+              type="text" value="{{ task.due_date }}" class="validate datepicker" required>
               <label for="due_date">Due Date</label>
             </div>
           </div>
@@ -55,7 +56,11 @@
                 <div class="switch">
                     <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
                     <label for="is_urgent">
-                      <input type="checkbox" id="is_urgent" name="is_urgent">
+                      {% if task.is_urgent == "on" %}
+                        <input type="checkbox" id="is_urgent" name="is_urgent" checked>
+                      {% else %}
+                        <input type="checkbox" id="is_urgent" name="is_urgent">
+                      {% endif %}
                       <span class="lever"></span>
                       Is urgent?
                     </label>
@@ -65,8 +70,12 @@
 
             <div class="row">
                 <div class="col s12 center-align">
+
+                    <a href="{{ url_for('get_tasks')}}" class="btn-large red text-shadow">
+                      Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
                     <button class="submit btn-large light-blue darken-1 text-shadow">
-                        Edit Task <i class="fas fa-edit right"></i>
+                        Confirm Edit <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
