--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
                 {% if session.user %}
-                  <li><a href="{{ url_for('profile', username=session['username']) }}">Profile</a></li>
+                  <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                   <li><a href="{{ url_for('add_task') }}">New Task</a></li>
                   <li><a href="#">Manage Categories</a></li>
                   <li><a href="{{ url_for('logout') }}">Log Out</a></li>
@@ -39,7 +39,7 @@
             <li><h4 class="center-align light-blue-text text-darken-4">Task Manager</h4></li>
             <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
             {% if session.user %}
-              <li><a href="{{ url_for('profile', username=session['username']) }}">Profile</a></li>
+              <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
               <li><a href="{{ url_for('add_task') }}">New Task</a></li>
               <li><a href="#">Manage Categories</a></li>
               <li><a href="{{ url_for('logout') }}">Log Out</a></li>
@@ -63,17 +63,16 @@
         {% endwith %}
     </section>
 
-
     <main class="container">
       {% block content %}
       {% endblock %}
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js')  }}"></script>
     {% block scripts %}
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="{{ url_for('static', filename='js/script.js')  }}"></script>
     {% endblock %}
 
 </body>
