added modal confirm test

--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -20,11 +20,25 @@
                     <a href="{{ url_for('get_categories') }}" class="btn-large red text-shadow">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    <button href="#modal1" class="modal-trigger btn-large light-blue darken-1 text-shadow">
                         Edit Category <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
+
+
+               
+                <!-- Modal Structure -->
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4 class="center">You sure?</h2>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat left">Cancel</a>
+                        <button type="submit" class="btn light-blue darken-1 text-shadow">
+                            Confirm Edit <i class="fas fa-edit right"></i>
+                        </button>
+                    </div>
+                </div>
         </form>
     </div>
 
