--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -4,10 +4,10 @@
     <h3 class="light-blue-text text-darken-4 center-align">Add Category</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
+        <form class="col s12" method="POST" action="{{ url_for('add_category') }}"> <!-- this will trigger app.py add_category() -->
             <!-- category name -->
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s12"> <!-- input-field is a design class -->
                     <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                     <input id="category_name" name="category_name" minlength="3" maxlength="25"
                         type="text" class="validate" required>
@@ -17,7 +17,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow"> <!-- type="submit" triggers python -->
                         Add Category <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
