--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes">
-                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+                        <h6 class="green lighten-1 center-align p-4">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}
