repurposing and experiments

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -25,25 +25,34 @@
               <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
               <input id="task_name" name="task_name" minlength="5" maxlength="50"
               type="text" class="validate" required>
-              <label for="task_name">Task Name</label>
+              <label for="task_name">Bee Name</label>
             </div>
           </div>
             <div class="input-field col s12">
               <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="task_description" name="task_description" minlength="5"
-                maxlength="50" class="materialize-textarea validate" required></textarea>
-              <label for="task_description">Task Description</label>
+              <textarea id="honey_production" name="honey_production" minlength="4"
+                maxlength="50" class="materialize-textarea validate" required placeholder="Good or Poor"></textarea>
+              <label for="honey_production">Honey Productivity</label>
+            </div>
+
+            <div class="input-field col s12">
+              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+              <textarea id="health" name="health" minlength="4"
+                maxlength="50" class="materialize-textarea validate" required placeholder="Healthy or Diseased"></textarea>
+              <label for="health">Health</label>
             </div>
           
-
+          
+<!-- 
           <div class="row">
             <div class="input-field col s12">
               <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
               <input id="due_date" name="due_date"
-              type="text" class="validate datepicker" required> <!-- datepicker triggers calender -->
+              type="text" class="validate datepicker" required> <!-- datepicker triggers calender -->  <!--
               <label for="due_date">Due Date</label>
             </div>
           </div>
+       -->
 
           <div class="row">
               <div class="input-field col s12">
