--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -27,19 +27,28 @@
           <div class="row">
             <div class="input-field col s12">
               <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-              <input id="task_name" name="task_name" minlength="5" maxlength="50"
+              <input id="task_name" name="task_name" minlength="4" maxlength="50"
                 value="{{ task.task_name }}" type="text" class="validate" required>
               <label for="task_name">Task Name</label>
             </div>
           </div>
             <div class="input-field col s12">
               <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-              <textarea id="task_description" name="task_description" minlength="5"
+              <textarea id="honey_production" name="honey_production" minlength="4"
                 maxlength="50" class="materialize-textarea validate" required>
-                {{- task.task_description -}}
+                {{- task.honey_production -}}
               </textarea>
-              <label for="task_description">Task Description</label>
+              <label for="task_description">honey_production</label>
             </div>
+            <div class="input-field col s12">
+              <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+              <textarea id="health" name="health" minlength="4"
+                maxlength="50" class="materialize-textarea validate" required>
+                {{- task.honey_production -}}
+              </textarea>
+              <label for="health">health</label>
+            </div>
+          
           
 
           <div class="row">
@@ -74,11 +83,24 @@
                     <a href="{{ url_for('get_tasks')}}" class="btn-large red text-shadow">
                       Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button class="submit btn-large light-blue darken-1 text-shadow">
+                    <button href="#modal1" class="modal-trigger btn-large light-blue darken-1 text-shadow">
                         Confirm Edit <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
+
+            <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+              <div class="modal-content">
+                  <h4 class="center">You sure?</h2>
+                  <p class="center"> Altering records or misleading authorities is a punishable offence</p>
+              <div class="modal-footer">
+                  <a href="#!" class="modal-close waves-effect waves-green btn-flat left">Cancel</a>
+                  <button type="submit" class="btn light-blue darken-1 text-shadow">
+                      Confirm Edit <i class="fas fa-edit right"></i>
+                  </button>
+              </div>
+          </div>
 
         </form>
       </div>
