--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -29,12 +29,11 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == task.created_by|lower %}
-                        <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small green accent-4">Done</a>
-                        <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small red accent-4">Alert!</a>
                     {% endif %}
                 </div>
                 <div class="col s9">
-                    <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+                    <strong>{{ task.task_name }}</strong> {{ task.class }} <!-- {{ task.task_description }}  : {{ task.due_date }} -->
                     {% if task.is_urgent == "on" %}
                         <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped"
                             data-position="right" data-tooltip="URGENT!"></i>
@@ -43,8 +42,12 @@
             </div>
             <div class="collapsible-body">
                 <strong>{{ task.category_name }}</strong>
-                <p>{{ task.task_description }}</p>
+                <p>Honey Productivity: {{ task.honey_production }}</p>
+                <p>Health: {{ task.health }}</p>
                 <p><em>by: {{ task.created_by }}</em></p>
+                {% if session.user|lower == task.created_by|lower %}
+                    <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                {% endif %}
             </div>
         </li>
         {% endfor %}
