--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -6,7 +6,7 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
-
+            <!-- 
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
@@ -23,13 +23,13 @@
                     <label>Task Category</label>
                   </div>
             </div>
-
+            -->
           <div class="row">
             <div class="input-field col s12">
               <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
               <input id="task_name" name="task_name" minlength="4" maxlength="50"
                 value="{{ task.task_name }}" type="text" class="validate" required>
-              <label for="task_name">Task Name</label>
+              <label for="task_name">Name</label>
             </div>
           </div>
             <div class="input-field col s12">
@@ -38,7 +38,7 @@
                 maxlength="50" class="materialize-textarea validate" required>
                 {{- task.honey_production -}}
               </textarea>
-              <label for="task_description">honey_production</label>
+              <label for="task_description">Honey Productivity</label>
             </div>
             <div class="input-field col s12">
               <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
