--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -12,10 +12,11 @@
                     <label for="query">Search Tasks</label>
                 </div>
                 <div class="col s12 m4">
-                    <a href="{{ url_for('get_tasks') }}" class="red btn text-shadow">Reset</a>
-                    <button type="submit" class="light-blue darken-1 btn text-shadow">
+                    <a href="{{ url_for('get_tasks') }}" class="btn grey text-darken waves-effect waves-red">Reset</a>
+                    <button type="submit" class="orange darken-1 btn waves-effect waves-yellow">
                         <i class="fas fa-search left"></i> Search
                     </button>
+          
                 </div>
             </div>
         </form>
