--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: #ffe2a2;
     color: #341302;
     font-family: 'IBM Plex Serif', serif;
 }
@@ -24,3 +23,113 @@ body {
 h1 {
     font-family: 'IBM Plex Serif', serif;
 }
+
+ /*
+  When creating your CSS selector,
+  change "brown" to something of your choosing
+  */
+  .waves-effect.waves-brown .waves-ripple {
+    /* The alpha value allows the text and background color
+    of the button to still show through. */
+     background-color: rgba(121, 85, 72, 0.65);
+   }
+
+   
+/* 
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgb(255, 255, 255);
+    z-index: 10;
+  }
+
+
+.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+    background: lime; 
+  }
+ 
+
+  https://stackoverflow.com/questions/1719452/how-to-make-a-div-always-full-screen
+
+   */
+
+
+   body {
+    font-family: "Open Sans", sans-serif;
+    color: #333;
+    background: #ececec;
+  }
+  
+  #fullview > div {
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.688rem;
+    flex-direction: column;
+    padding: 25px;
+  }
+  
+  #fullview > div:nth-child(even) {
+    background-color: #282c34;
+    color: #ffffff;
+  }
+  
+  #fullview h2 {
+    margin: auto;
+    width: 50%;
+    text-align: center;
+  }
+  
+  button {
+    cursor: pointer;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  
+  select,
+  input, button {
+    display: inline-block;
+    padding: 8px 17px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 9px #888;
+    border: 1px solid transparent;
+  }
+  
+  #down {
+    box-shadow: 0px 2px 9px #888;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  form label {
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
+  
+  /* Override Styles */
+  #fv-dots ul li a span {
+    background-color: #888888;
+    border-radius: 0;
+    transition: all 0.5s ease;
+  }
+  
+  #fv-dots ul a.active span {
+    width: 11px;
+    height: 11px;
+    transform: rotate(45deg);
+    background-color: #bdbdbd;
+  }
+  
