--- a/templates/start2.html
+++ b/templates/start2.html
@@ -2,37 +2,86 @@
 {% block content %}
 
     <div id="fullpage">
-        <div class="section center">
-            <h1 id="game-title">I🐝M</h1>
-            <p id="game-subtitle">A short admin game about efficient honey production</p>
-            <i class="fa fa-arrow-down" id="arrow" aria-hidden="true"></i>
+
+        <div class="section">
+            <div class="center-custom">
+                <h1 id="game-title">I🐝M</h1><br>
+                <p id="game-subtitle">A short admin game about efficient honey production</p>
+                <a href="#2"><i class="fas fa-chevron-down" id="arrow" aria-hidden="true"></i></a>
+            </div>
         </div>
         
+        <div class="section center" id="2">
+            <h1 id="honey-pot">🍯</h1><br>
+
+            <div>
+                <p>
+                    We are a busy hive producing lots of honey!<br>
+                    However some of our worker bees are not productive enough.<br><br>
+                    The Queen ordered a census of the hive and our new I🐝M database is here to help!<br>
+                    It contains the records of every bee in the hive and various details about them.<br><br>
+                    Will you help us sort through the data to make our hive as efficient as possible?<br>
+                </p>
+            </div>
+            <a href="#3"><i class="fas fa-chevron-down" id="arrow2" aria-hidden="true"></i></a>
+        </div>
 
 
-        <div class="section">
-          <div class="slide">
-            <p>We are a busy hive producing lots of honey.<br>
-                However some of our worker bees are not as productive as required.<br>
-                Wanna help us make our hive great?</p>
-          </div>
-          <div class="slide">
-            <p>2-2</p>
-          </div>
-          <div class="slide">
-            <p>2-3</p>
-          </div>
-          <div class="slide">
-            <p>2-4</p>
-          </div>
+        <div class="section center" id="3">
+
+          <div class="row">
+            <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+                <div class="card-panel">
+        
+                    <!-- user -->
+                    <div class="row">
+                        <img src="static/images/symbol2.png" width="25px">
+                        <div class="input-field col s12">
+                            <input id="username" name="username" type="text" class="validate" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
+                            <label for="username">Username</label>
+                        </div>
+                    </div>
+                    <!-- password -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" name="password" type="password" class="validate" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
+                            <label for="password">Buzzword</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="name" name="name" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <label for="name">Full Name</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="address" name="address" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <label for="address">Address</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="phone" name="phone" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <label for="phone">Telephone</label>
+                        </div>
+                    </div>
+
+                    <!-- button -->
+                    <div class="row">
+                        <button type="submit" class="col s12 btn-large yellow waves-effect waves-orange">
+                        ENTER THE HIVE
+                        </button>
+                    </div>
+                </div>
+                
+            </form>
         </div>
-        <div class="section">
-          <p>3</p>
-        </div>
-        <div class="section">
-          <p>4</p>
-        </div>
-      </div>
+    </div>
+
 
 {% endblock %}
     
