--- a/templates/base_bare.html
+++ b/templates/base_bare.html
@@ -42,7 +42,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="https://cdnjs.com/libraries/fullPage.js"></script>
-      <script src="{{ url_for('static', filename='js/script2.js')  }}"></script>
+      <script src="{{ url_for('static', filename='js/script.js')  }}"></script>
     {% endblock %}
 
 </body>
