--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,59 +1,226 @@
-body {
-    font-family: 'IBM Plex Serif', serif;
+ * {
+  margin: 0; 
+  padding: 0; 
 }
 
-.text-shadow {
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5)
+a {
+  color: #333;
 }
+
+.container {
+  width: 100% !important;
+}
+
+body {
+  font-family: 'IBM Plex Serif', serif;
+  color: #333;
+}
+
+
+/*
+.text-shadow {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5)
+}*/
 
 .flashes h4 {
-    line-height: 2;
+  line-height: 2;
 }
 
 .btn-small {
-    margin: 5px;
+  margin: 5px;
 }
 
 .collapsible-header .col strong {
-    margin: 5px;
-    line-height: 42px;
+  margin: 5px;
+  line-height: 42px;
+}
+
+/*
+When creating your CSS selector,
+change "brown" to something of your choosing
+*/
+.waves-effect.waves-brown .waves-ripple {
+  /* The alpha value allows the text and background color
+  of the button to still show through. */
+   background-color: rgba(121, 85, 72, 0.65);
+ }
+
+ 
+/*
+#fullpage {
+  text-align: center;
+}
+*/
+
+a {
+  text-decoration: none;
+  color:#333;
+}
+
+.center-custom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#game-title {
+  font-size: 10rem;
+  position: absolute;
+  top: 225px;
+}
+
+#game-subtitle {
+  font-size: 1rem;
+  position: absolute;
+  bottom: 275px;
+}
+
+#arrow {
+  position: absolute;
+  font-size: 3rem;
+  bottom: 20px;
+}
+
+#arrow2 {
+  margin-top: 40px;
+  font-size: 3rem;
+}
+
+.section {
+  height: 100vh;
+}
+
+#honey-pot {
+  font-size: 9rem;
+}
+
+.section:nth-child(2) {
+  /* background-image: url("/static/images/bg25.png");
+  background-repeat: repeat; */
+  font-size: 1.3rem;
+  line-height: 3rem;
+}
+
+#highlight {
+  font-size: 2rem;
+}
+
+#symbol {
+  margin-top: 80px;
+  margin-bottom: 60px;
 }
 
 
- /*
-  When creating your CSS selector,
-  change "brown" to something of your choosing
-  */
-  .waves-effect.waves-brown .waves-ripple {
-    /* The alpha value allows the text and background color
-    of the button to still show through. */
-     background-color: rgba(121, 85, 72, 0.65);
-   }
 
-   
-/* 
-.overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: rgb(255, 255, 255);
-    z-index: 10;
-  }
+.section:nth-child(3) {
+  font-size: 1.5rem;
+   /* background-image: url("/static/images/hivebg.png"); */
+}
 
 
-.fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    overflow: auto;
-    background: lime; 
-  }
- 
+/* label color */
+.input-field label {
+  color: #333;
+}
 
-  https://stackoverflow.com/questions/1719452/how-to-make-a-div-always-full-screen
+/* label focus color */
+.input-field input[type=text]:focus + label {
+  color: #333;
+}
 
-   */
+ /* label underline focus color */
+ .input-field input[type=text]:focus {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* valid color */
+.input-field input[type=text].valid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: #000;
+}
+
+
+
+
+
+#congrats {
+  font-size: 8rem;
+  margin-top: 200px;
+
+}
+
+#congrats-subtitle {
+  font-size: 1rem;
+  margin-top: -30px;
+}
+
+#arrow1 {
+  position: absolute;
+  font-size: 3rem;
+  bottom: 20px;
+}
+
+
+
+
+#book {
+  width: 300px; 
+  margin: 50px;
+}
+
+#end2 {
+  font-size: 1rem;
+  line-height: 2rem;
+  text-align: left;
+}
+
+#gameover {
+  font-size: 10rem;
+  margin-top: 200px;
+}
+
+#gameover-subtitle {
+  font-size: 1.8rem;
+  margin-top: -50px;
+}
+
+#final-message {
+  font-size: 0.9rem;
+  margin-top: 200px;
+}
+
+#trail {
+  display: flex;
+  position:relative;
+  right: -458px;
+  opacity: 0.2;
+  top: 50px;
+  width: 900px;
+}
+
+#final-bee {
+  display: flex;
+  position:relative;
+  top: -140px;
+  right: -425px;
+}
+
+#final-message {
+  display: flex;
+  position:relative;
+  top: -410px;
+  right: -30px;
+}
+
+#final-comp {
+  margin-top: 20px;
+}
