--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
               <a href="{{ url_for('get_tasks') }}" class="brand-logo">I🐝M</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('end_state') }}">end?</a></li>
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
                 {% if session.user %}
                   <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
