--- a/templates/end.html
+++ b/templates/end.html
@@ -34,8 +34,7 @@
         <div class="section center" id="2">
             <div class="row">
                 <div class="col s12 m6" id="end2">
-                    <h3 id="quote">“Without IBM's machinery, continuing upkeep and service, as well as the supply of punch cards...
-                        Hitler's camps could have never managed the numbers they did."</h3>
+                    <h3 id="quote">“Without IBM's machinery...Hitler's camps could have never managed the numbers they did."</h3>
 
                     <p>
                     'IBM and the Holocaust' outlines the true story of IBM's collaboration in the Nazi genocide.
