--- a/templates/base_bare2.html
+++ b/templates/base_bare2.html
@@ -20,6 +20,18 @@
     <title>Task Manager</title>
 </head>
 <body>
+  <section>
+    <!-- flash messages -->
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="row flashes">
+                    <h3 class="green lighten-1 center-align p-4">{{ message }}</h4>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+</section>
     <main class="container">
       {% block content %}
       {% endblock %}
@@ -30,7 +42,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="https://cdnjs.com/libraries/fullPage.js"></script>
-      <script src="{{ url_for('static', filename='js/script.js')  }}"></script>
+      <script src="{{ url_for('static', filename='js/script2.js')  }}"></script>
     {% endblock %}
 
 </body>
