--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -6,24 +6,7 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
-            <!-- 
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                    <select id="category_name" name="category_name" class="validate" required>
-                      <option value="" disabled>Choose your option</option>
-                      {% for category in categories %}
-                        {% if category.category_name == task.category_name %}
-                          <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
-                        {% else %}
-                          <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endif %}
-                      {% endfor %}
-                    </select>
-                    <label>Task Category</label>
-                  </div>
-            </div>
-            -->
+
           <div class="row">
             <div class="input-field col s12">
               <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -44,38 +27,10 @@
               <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
               <textarea id="health" name="health" minlength="4"
                 maxlength="50" class="materialize-textarea validate" required>
-                {{- task.honey_production -}}
+                {{- task.health -}}
               </textarea>
-              <label for="health">health</label>
+              <label for="health">Health</label>
             </div>
-          
-          
-
-          <div class="row">
-            <div class="input-field col s12">
-              <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-              <input id="due_date" name="due_date"
-              type="text" value="{{ task.due_date }}" class="validate datepicker" required>
-              <label for="due_date">Due Date</label>
-            </div>
-          </div>
-
-          <div class="row">
-              <div class="input-field col s12">
-                <div class="switch">
-                    <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
-                    <label for="is_urgent">
-                      {% if task.is_urgent == "on" %}
-                        <input type="checkbox" id="is_urgent" name="is_urgent" checked>
-                      {% else %}
-                        <input type="checkbox" id="is_urgent" name="is_urgent">
-                      {% endif %}
-                      <span class="lever"></span>
-                      Is urgent?
-                    </label>
-                  </div>
-              </div>
-          </div>
 
             <div class="row">
                 <div class="col s12 center-align">
