--- a/templates/tasks_del.html
+++ b/templates/tasks_del.html
@@ -28,25 +28,34 @@
         <input type="submit" value="Delete All" />
     </form>
 
-    {% if tasks|length > 0 %}
-    <ul class="collection">
-        {% for task in tasks %}
-        <li class="collection-item avatar">     
-            <a href="{{ url_for('edit_task', task_id=task._id) }}" class="right btn-small btn-flat"><i class="fas fa-edit" id="grey"></i></a>
-            <img src="/static/images/symbol2.png" width="10px">
-            <span class="title">{{ task.task_name }}<br>
-            {{ task.honey_production }}<br>
-            {{ task.health }}</p></span>
 
-            <a href="{{ url_for('delete_task', task_id=task._id) }}"
-            onclick="M.toast({html: 'Bee Reported', classes: 'rounded'})"
-            class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
-       
-            
+
+    {% if tasks|length > 0 %}
+    <ul class="collapsible">
+        {% for task in tasks %}
+        <li>
+            <div class="collapsible-header">
+                    <label><input type="checkbox" name="checkbox" id="checkbox">
+                        <span>{{ task.task_name }} 🍯 {{ task.honey_production }} 🩸 {{ task.health }}</span>
+                    </label>
+                        
+                    <a href="{{ url_for('delete_task', task_id=task._id) }}"
+                        onclick="M.toast({html: 'Bee Reported'})"
+                        class="right btn-small red accent-4 waves-effect waves-yellow">Alert?</a>
+                    
+                </div>
+            </div>
+            <div class="collapsible-body">
+                <p>Honey Productivity: {{ task.honey_production }}</p>
+                <p>Health: {{ task.health }}</p>
+ 
+                {% if session.user|lower == task.created_by|lower %}
+                    <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                {% endif %}
+            </div>
         </li>
         {% endfor %}
     </ul>
-
     {% else %}
     <h3 class="light-blue-text text-darken-4 center-align">NOTHING!</h3>
     {% endif %}
