--- a/templates/start.html
+++ b/templates/start.html
@@ -47,8 +47,8 @@
 
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="name" name="name" type="text" class="validate" placeholder="optional but unlocks extra feature!">
-                            <label for="name">Full Name</label>
+                            <input id="full_name" name="full_name" type="text" class="validate" placeholder="optional but unlocks extra feature!">
+                            <label for="full_name">Full Name</label>
                         </div>
                     </div>
 
