--- a/templates/end.html
+++ b/templates/end.html
@@ -98,6 +98,13 @@
                     </p>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col s12">
+                    <a href="{{ url_for('logout') }}"><button>Delete all {{ username }} data?</button></a>
+                    <p>:)</p>
+                </div>
+            </div>
         </div>
 
         
