--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,7 +5,7 @@
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <i class="fas fa-search prefix"></i>
                     <input type="text" name="query" id="query" required>
                     <label for="query">Search Hive</label>
                 </div>
