--- a/templates/logged_out.html
+++ b/templates/logged_out.html
@@ -1,19 +1,12 @@
 {% extends "base_bare.html" %}
 {% block content %}
-
     
 
-            <div class="row">
-                <div class="col s12">
-                    <a href="/templates/start"><button>REPLAY?</button></a>
-                    <p>:)</p>
-                </div>
-            </div>
-        </div>
-
-        
-
-
+<div class="row center-custom">
+    <div class="col s12">
+        <a href="/start"><button>REPLAY?</button></a>
+    </div>
+</div>
 
 
 {% endblock %}
