--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -2,23 +2,16 @@
 
 {% block content %}
 
-    <h3 class="light-blue-text text-dark-4 center-align">Add Task</h3>
+    <p>WELCOME! Her is one thing to do</p>
 
-    <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
+    
 
-            <div class="row">
-                <div class="input-field col s12"> <!-- materialize class -->
-                    <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                    <select id="category_name" name="category_name" class="validate" required>
-                      <option value="" disabled selected>Choose your option</option>
-                      {% for category in categories %} <!-- gets category list from mongodb  -->
-                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Task Category</label>
-                  </div>
-            </div>
+    <div class="row card-panel grey lighten-5 s12">
+      <div class="col s6">
+        <img src="/static/images/IBM-book.jpg">
+      </div>
+
+        <form class="col s6" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
 
           <div class="row">
             <div class="input-field col s12">
