--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,7 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-
-    <div class="row card-panel grey lighten-5">
+ <!-- flash messages 
+<section>
+   
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="col flashes">
+                    <a class="btn-flat tooltipped" data-position="bottom"
+                    data-tooltip="Search and Alert">
+                    {{ message }}<span class="new badge"></span></a>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+</section>    
+-->
+<!-- 
+    <div class="row">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
@@ -14,12 +30,19 @@
                     <button type="submit" class="orange darken-1 btn waves-effect waves-yellow">
                         <i class="fas fa-search left"></i> Search
                     </button>
-          
                 </div>
             </div>
         </form>
     </div>
-    
+    -->
+    <div class="row">
+        <div class="col s12 center">
+            <br>
+            <p>Find and ALERT the system regarding all problem bees to make this hive a more efficient honey producing machine!</p>
+            <br>
+        </div>
+    </div>
+
     <form action="/fill-db-button">
         <input type="submit" value="Fill DataBase" />
     </form>
