--- a/templates/welcome_task.html
+++ b/templates/welcome_task.html
@@ -2,10 +2,15 @@
 
 {% block content %}
 
-    <h3 class="light-blue-text text-dark-4 center-align">Add Task</h3>
+    <h3 class="light-blue-text text-dark-4 center-align">Message</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
+
+        <div class="col m6">
+          <img src="/static/images/IBM-book.jpg">
+        </div>
+
+        <form class="col m6" method="POST" action="{{ url_for('add_task') }}"> <!-- triggers python add_task -->
 
           <div class="row">
             <div class="input-field col s12">
@@ -32,7 +37,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <button class="submit btn-large light-blue darken-1 text-shadow"> <!-- submit triggers python -->
-                        Add Task <i class="fas fa-plus-square right"></i>
+                        Add Bee <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
             </div>
