--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -38,10 +38,17 @@
     <div class="row">
         <div class="col s12 center">
             <br>
-            <p>Find and ALERT the system regarding all problem bees to make this hive a more efficient honey producing machine!</p>
+            <p>To make this hive a more efficient honey producing machine, find and ALERT the system to all problem bees</p>
             <br>
         </div>
     </div>
+
+    <div class="progress-bar-container">
+        <div class="progress-bar">
+            <span class="percentage task-progress">
+            </span>
+        </div>
+      </div>
 
     <form action="/fill-db-button">
         <input type="submit" value="Fill DataBase" />
@@ -51,27 +58,51 @@
         <input type="submit" value="Delete All" />
     </form>
 
+    
+        <a href="{{ url_for('delete_multiple') }}" onclick="M.toast({html: 'Reported! Good Job!', classes: 'rounded'})"
+        class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
+    
+
+
     {% if tasks|length > 0 %}
     <ul class="collection">
         {% for task in tasks %}
-        <li class="collection-item avatar">     
-            <a href="{{ url_for('edit_task', task_id=task._id) }}" class="right btn-small btn-flat"><i class="fas fa-edit" id="grey"></i></a>
-            <img src="/static/images/symbol2.png" width="10px">
-            <span class="title">{{ task.task_name }}<br>
-            {{ task.honey_production }}<br>
-            {{ task.health }}</p></span>
+        <li class="collection-item avatar">   
 
-            <a href="{{ url_for('delete_task', task_id=task._id) }}"
-            onclick="M.toast({html: 'Bee Reported', classes: 'rounded'})"
-            class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
-       
+            <div class="row">
+
+                <div class="col s1">
+                    <form action="{{ url_for('delete_multiple') }}" method="post">
+                        <p>
+                        <label>
+                            <input type="checkbox" name="mycheckbox" value="{{ task._id }}"
+                            onclick="M.toast({html: '{{ task.task_name }}', classes: 'rounded'})"/>
+                            <span>        <a href="{{ url_for('delete_multiple') }}" onclick="M.toast({html: 'Reported! Good Job!', classes: 'rounded'})"
+                                class="btn-small">inside a form</a> </span>
+                        </label>
+                        </p>
+                    </form>
+                </div>
             
+                <div class="col s11">
+                        <a href="{{ url_for('edit_task', task_id=task._id) }}" class="right btn-small btn-flat"><i class="fas fa-edit" id="grey"></i></a>
+                        
+                        <img src="/static/images/symbol2.png" width="10px">
+                        <span class="title">{{ task.task_name }}<br>
+                        {{ task.honey_production }}<br>
+                        {{ task.health }}</p></span>
+
+                        <a href="{{ url_for('delete_task', task_id=task._id) }}"
+                        onclick="M.toast({html: 'Bee Reported', classes: 'rounded'})"
+                        class="btn-small red accent-4 waves-effect waves-white">Alert?</a>
+                </div>
+            </div> 
         </li>
         {% endfor %}
     </ul>
 
     {% else %}
-    <h3 class="light-blue-text text-darken-4 center-align">NOTHING!</h3>
+        <h3 class="enter-align">No results found</h3>
     {% endif %}
 
     
